# imagen

./: .gitignore  Cargo.toml  LICENSE  README.md  cargo.toml  compose.yaml
api/: Cargo.toml  Dockerfile
api/src/: init.rs  macros.rs  main.rs
api/src/routes/: commands.rs  mod.rs
core/: Cargo.toml
core/src/: arc.rs  circle.rs  lib.rs  rect.rs  text.rs
core/src/circle/: filled.rs  stroke.rs
core/src/rect/: filled.rs  mod.rs  stroke.rs
demo/: Cargo.toml
demo/src/: main.rs
img/: Cargo.toml
img/src/: lib.rs  rgba.rs  rgba_image.rs
img/src/codecs/: mod.rs  png.rs
web/: Dockerfile  package.json  pnpm-lock.yaml
web/app/: globals.css  layout.tsx  page.tsx
web/app/demo/: page.tsx
web/components/: CommandDialog.tsx  Tile.tsx
web/components/CommandDialog/: ColorPicker.tsx  CommandField.tsx  CommandForm.tsx  index.tsx  useCommandForm.ts
web/components/ui/: button.tsx
web/lib/DialogManager/: dialogs.ts
web/lib/providers/: QueryClient.tsx  api.ts  types.ts
web/types/: api.d.ts
